fix: set scrollbar style

--- a/assets/scss/wowchemy/_base.scss
+++ b/assets/scss/wowchemy/_base.scss
@@ -47,6 +47,19 @@ body.no-navbar {
   scroll-padding-top: 0 !important;
 }
 
+body, body * {
+  &::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+  }
+  &::-webkit-scrollbar-track{
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(127, 127, 127, 0.5);
+  }
+}
+
 // PAGE LAYOUT
 // Designed to push footer to bottom of viewport for short pages.
 
